--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,11 @@
 ---
 layout: default
+title: Fernanda Andrade
+permalink: /blog/
+tags: blog
 ---
-{% assign posts_count = (page.paginator.posts | size) %}
+
+{% assign posts_count = (paginator.posts | size) %}
 
 <div class="home">
   {% if posts_count > 0 %}
