--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 layout: default
 ---
 
-<div class="home">
-
-  <h2>Hello, I'm</h2>
-  <h1>Fernanda Andrade</h1>
+<div class="presentation">
+  <h2>HELLO, I'M</h2>
+  <h1>FERNANDA ANDRADE</h1>
   <h3>Developer</h3>
-
 </div>
+
+<section class="container px2 py3">
+  <div class="clearfix mxn2">
+    <div class="sm-col sm-col-6 px2">
+      <img src="images/nocturna.png">
+    </div>
+    <div class="sm-col sm-col-6 px2">
+      <h3> Recent Projects </h3>
+    </div>
+  </div>
+</section>
