--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <section class="container px2 py3">
   <div class="clearfix mxn2">
     <div class="sm-col sm-col-6 px2">
-      <img src="images/nocturna.png">
+      <img src="images/nocturna.png" width="30%">
     </div>
     <div class="sm-col sm-col-6 px2">
       <h3> Recent Projects </h3>
