--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ layout: default
 <section class="container px2 py3">
   <div class="clearfix mxn2">
     <div class="sm-col sm-col-6 px2">
-      <img src="images/nocturna.png" width="30%">
+      <p>Test<p>
     </div>
     <div class="sm-col sm-col-6 px2">
-      <h3> Recent Projects </h3>
+      <p>Test<p>
     </div>
   </div>
 </section>
