--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 ---
-layout: front
+layout: default
 ---
 
-<section class="container px2 py3">
-  <div class="clearfix mxn2">
-    <div class="sm-col sm-col-3 px2">
-      <p>Test<p>
+<div class="presentation">
+  <h2>HELLO, I'M</h2>
+  <h1>FERNANDA ANDRADE</h1>
+  <h3>Developer</h3>
+</div>
+
+<div class="projects">
+  <div class="p-first">
+    <div class="p2 p-main">
+      <img src="images/nocturna.png" alt="Nocturna" />
     </div>
-    <div class="sm-col sm-col-3 px2">
-      <p>Test<p>
+    <div class="p-title bg-blue">
+      Web Projects
     </div>
   </div>
-</section>
+</div>
