--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <div class="p2 p-main">
       <img src="images/nocturna.png" alt="Nocturna" />
     </div>
-    <div class="p-title bg-blue">
+    <div class="p2 bg-blue p-title ">
       Web Projects
     </div>
   </div>
