--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: default
 
 <div class="projects">
   <div class="p-first">
-    <div class="p2 p-main">
+    <div class="p2 bg-darken-1  p-main">
       <img src="images/nocturna.png" alt="Nocturna" />
     </div>
     <div class="p2 bg-blue white p-title">
-      Web Projects
+      <h3>Web Projects</h3>
     </div>
   </div>
 </div>
