--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="presentation">
-  <h2>HELLO, I'M</h2>
-  <h1>FERNANDA ANDRADE</h1>
+  <h2>Hello, I'm</h2>
+  <div class="caps"><h1>Fernanda Andrade</h1></div>
   <h3>Developer</h3>
 </div>
 
@@ -13,7 +13,7 @@ layout: default
     <div class="p2 bg-darken-1  p-main">
       <img src="images/nocturna.png" alt="Nocturna" />
     </div>
-    <div class="p2 bg-blue white p-title">
+    <div class="p2 bg-blue white align-middle h2 p-title">
       <h3>Web Projects</h3>
     </div>
   </div>
