--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@ layout: default
 ---
 
 <div class="presentation">
-  <h2>Hello, I'm</h2>
-  <div class="caps"><h1>Fernanda Andrade</h1></div>
+  <h2>HELLO, I'M</h2>
+  <h1>FERNANDA ANDRADE</h1>
   <h3>Developer</h3>
 </div>
 
 <div class="projects">
   <div class="p-first">
-    <div class="p2 bg-darken-1  p-main">
+    <div class="p4 bg-darken-1  p-main">
       <img src="images/nocturna.png" alt="Nocturna" />
     </div>
-    <div class="p2 bg-blue white align-middle h2 p-title">
+    <div class="p4 bg-blue white align-middle p-title">
       <h3>Web Projects</h3>
     </div>
   </div>
