--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ layout: default
 
 <div class="projects">
   <div class="p-first">
-    <div class="p4 bg-darken-1  p-main">
+    <div class="p4 pb0 bg-darken-1  p-main">
       <img src="images/nocturna.png" alt="Nocturna" />
     </div>
-    <div class="p4 bg-blue white align-middle p-title">
+    <div class="p2 bg-blue white align-middle p-title">
       <h3>Web Projects</h3>
     </div>
   </div>
