--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="projects">
-  <div class="p-first">
-    <div class="px4 mt4 bg-darken-1 p-main">
-      <img src="images/nocturna.png" alt="Nocturna" />
-    </div>
-    <div class="bg-blue white block mx-auto p-title">
+<div class="flex flex-stretch">
+  <div class="flex-auto px2 py4 bg-darken-1">
+    <img src="images/nocturna.png" alt="Nocturna" class="m0"/>
+  </div>
+  <div class="flex blue border">
+    <div class="px2 white bg-blue">
       <h3>Web Projects</h3>
     </div>
   </div>
