--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ layout: default
 </div>
 
 <div class="flex flex-stretch">
-  <div class="flex-auto px2 py4 bg-darken-1 p-main">
-    <img src="images/nocturna.png" alt="Nocturna" class="m0"/>
+  <div class="flex-auto px4 bg-darken-1 p-main">
+    <img src="images/nocturna.png" alt="Nocturna" class="mt4"/>
   </div>
-  <div class="flex-auto blue border p-title">
+  <div class="mx-auto align-middle blue border p-title">
     <div class="px2 white bg-blue">
       <h3>Web Projects</h3>
     </div>
