--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: default
 </div>
 
 <div class="flex flex-stretch">
-  <div class="flex-auto px4 bg-darken-1 p-main">
+  <div class="flex-auto px2 bg-darken-1 p-main">
     <img src="images/nocturna.png" alt="Nocturna" class="mt4"/>
   </div>
-  <div class="mx-auto align-middle blue border p-title">
-    <div class="px2 white bg-blue">
+  <div class="flex white bg-blue p-title">
+    <div class="mx-auto align-middle">
       <h3>Web Projects</h3>
     </div>
   </div>
