--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ layout: default
   <div class="flex-auto px2 bg-darken-1 p-main">
     <img src="images/nocturna.png" alt="Nocturna" class="mt4"/>
   </div>
-  <div class="flex white bg-blue p-title">
-    <div class="mx-auto align-middle">
-      <h3>Web Projects</h3>
-    </div>
+  <div class="flex flex-center white bg-blue p-title">
+      <h3 class="mx-auto">Web Projects</h3>
   </div>
 </div>
