--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="flex flex-wrap">
+<div class="flex flex-strech">
   <div class="flex-auto px4 bg-darken-1 p-main">
     <img src="images/nocturna.png" alt="Nocturna" class="mt2"/>
   </div>
   <div class="flex flex-center white bg-blue p-title">
       <h2 class="mx-auto">Web Projects</h2>
   </div>
+</div>
+<div class="flex flex-strech">
   <div class="flex-auto px4 bg-darken-1 p-project">
     <img src="images/nocturna.png" alt="Nocturna" class="mt2"/>
   </div>
