--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ layout: default
 
 <div class="flex flex-strech">
   <div class="flex-auto px4 bg-darken-1 p-main">
-    <img src="images/nocturna.png" alt="Nocturna" class="mt2"/>
+    <div class="browser-mockup with-tab">
+      <img src="http://placehold.it/500x300/fff/eee" />
+    </div>
   </div>
   <div class="flex flex-center white bg-blue p-title">
       <h2 class="mx-auto">Web Projects</h2>
@@ -18,9 +20,13 @@ layout: default
 </div>
 <div class="flex flex-strech">
   <div class="flex-auto px4 bg-darken-1 p-project">
-    <img src="images/nocturna.png" alt="Nocturna" class="mt2"/>
+    <div class="browser-mockup with-tab">
+      <img src="http://placehold.it/500x300/fff/eee" />
+    </div>
   </div>
   <div class="flex-auto px4 bg-darken-1 p-project">
-    <img src="images/nocturna.png" alt="Nocturna" class="mt2"/>
+    <div class="browser-mockup with-tab">
+      <img src="http://placehold.it/500x300/fff/eee" />
+    </div>
   </div>
 </div>
