--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
 </div>
 
 <div class="flex flex-strech">
-  <div class="flex-auto px4 bg-darken-1 p-main">
-    <div class="browser-mockup with-tab">
-      <img src="http://placehold.it/500x300/fff/eee" />
+  <div class="flex-auto px4 bg-red p-main">
+    <div class="browser-mockup with-tab mt3">
+      <img src="images/quitocrimemap.jpg" alt="Crime Map" />
     </div>
   </div>
   <div class="flex flex-center white bg-blue p-title">
@@ -19,14 +19,14 @@ layout: default
   </div>
 </div>
 <div class="flex flex-strech">
-  <div class="flex-auto px4 bg-darken-1 p-project">
-    <div class="browser-mockup with-tab">
-      <img src="http://placehold.it/500x300/fff/eee" />
+  <div class="flex-auto px4 bg-darken-4 p-project">
+    <div class="browser-mockup with-tab mt3">
+      <img src="images/nocturna.jpg" alt="Nocturna" />
     </div>
   </div>
-  <div class="flex-auto px4 bg-darken-1 p-project">
-    <div class="browser-mockup with-tab">
-      <img src="http://placehold.it/500x300/fff/eee" />
+  <div class="flex-auto px4 bg-green p-project">
+    <div class="browser-mockup with-tab mt3">
+      <img src="images/gentedeletras.jpg" alt="Gente de lettras" />
     </div>
   </div>
 </div>
