--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ layout: default
 </div>
 
 <div class="flex flex-strech">
-  <div class="flex-auto px4 bg-red p-main">
-    <div class="browser-mockup with-tab mt3">
+  <div class="flex-auto px4 bg-brown p-main">
+    <div class="browser-mockup mt3">
       <img src="images/quitocrimemap.jpg" alt="Crime Map" />
     </div>
   </div>
@@ -19,14 +19,14 @@ layout: default
   </div>
 </div>
 <div class="flex flex-strech">
-  <div class="flex-auto px4 bg-darken-4 p-project">
-    <div class="browser-mockup with-tab mt3">
+  <div class="flex-auto px4 bg-blackie p-project">
+    <div class="browser-mockup mt3">
       <img src="images/nocturna.jpg" alt="Nocturna" />
     </div>
   </div>
   <div class="flex-auto px4 bg-green p-project">
-    <div class="browser-mockup with-tab mt3">
-      <img src="images/gentedeletras.jpg" alt="Gente de lettras" />
+    <div class="browser-mockup mt3">
+      <img src="images/gentedeletras.jpg" alt="Gente de letras" />
     </div>
   </div>
 </div>
