--- a/index.html
+++ b/index.html
@@ -8,25 +8,22 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="flex flex-strech">
-  <div class="flex-auto px4 bg-brown p-main">
-    <div class="browser-mockup mt3">
-      <img src="images/quitocrimemap.jpg" alt="Crime Map" />
+<div class="projects">
+  <div class="flex flex-strech">
+    <div class="flex-auto px4 bg-brown p-main">
+      <div class="browser-mockup mt3">
+        <img src="images/quitocrimemap.jpg" alt="Crime Map" />
+      </div>
+    </div>
+    <div class="flex flex-center white bg-blue p-title">
+        <h2 class="mx-auto">Web Projects</h2>
     </div>
   </div>
-  <div class="flex flex-center white bg-blue p-title">
-      <h2 class="mx-auto">Web Projects</h2>
-  </div>
-</div>
-<div class="flex flex-strech">
-  <div class="flex-auto px4 bg-blackie p-project">
-    <div class="browser-mockup mt3">
-      <img src="images/nocturna.jpg" alt="Nocturna" />
+  <div class="flex flex-strech">
+    <div class="flex-auto px4 bg-blackie p-project">
+      <div class="browser-mockup mt3">
+        <img src="images/nocturna.jpg" alt="Nocturna" />
+      </div>
     </div>
   </div>
-  <div class="flex-auto px4 bg-green p-project">
-    <div class="browser-mockup mt3">
-      <img src="images/gentedeletras.jpg" alt="Gente de letras" />
-    </div>
-  </div>
-</div>
+</div>  
