--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="projects">
+<div class="projectsm mt4">
   <div class="flex flex-strech">
     <div class="flex-auto px4 bg-brown p-main">
       <div class="browser-mockup mt3">
@@ -26,4 +26,4 @@ layout: default
       </div>
     </div>
   </div>
-</div>  
+</div>
