--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="projectsm mt4">
+<div class="projects mt4">
   <div class="flex flex-strech">
     <div class="flex-auto px4 bg-brown p-main">
       <div class="browser-mockup mt3">
