--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 <div class="projects mt4">
   <div class="flex flex-strech">
-    <div class="flex-auto px4 bg-brown p-main">
+    <div class="flex-auto px4 p-main">
       <div class="browser-mockup mt3">
         <img src="images/quitocrimemap.jpg" alt="Crime Map" />
       </div>
@@ -20,7 +20,7 @@ layout: default
     </div>
   </div>
   <div class="flex flex-strech">
-    <div class="flex-auto px4 bg-blackie p-project">
+    <div class="flex-auto px4 p-project">
       <div class="browser-mockup mt3">
         <img src="images/nocturna.jpg" alt="Nocturna" />
       </div>
