--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         <img src="images/quitocrimemap.jpg" alt="Crime Map" />
       </div>
     </div>
-    <div class="flex flex-center white bg-blue p-title">
+    <div class="flex flex-center white p-title">
         <h2 class="mx-auto">Web Projects</h2>
     </div>
   </div>
