--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       </div>
     </div>
     <div class="flex flex-center white p-title">
-        <h2 class="mx-auto">Web Projects</h2>
+        <h2 class="mx-auto">Recent Projects</h2>
     </div>
   </div>
   <div class="flex flex-strech">
@@ -26,4 +26,8 @@ layout: default
       </div>
     </div>
   </div>
+</div>
+
+<div class="github-projects">
+  <h3 class="px4 py4 mx-auto">Repositories</h3>
 </div>
