--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ layout: default
   </div>
 </div>
 
-<div class="github-projects">
-  <h3 class="px4 py2 mx-auto">Repositories</h3>
+<div class="github-projects mt3">
+  <h3 class="px4 py2 white">Repositories</h3>
 </div>
