--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@ layout: default
 </div>
 
 <div class="github-projects mt3">
-  <h3 class="px4 py2 white">Repositories</h3>
+  <h3 class="px4 py2 white"><i class="fa fa-github"></i> Repositories</h3>
 </div>
