edit about and contact info

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@ tags: contact
 
 <div class="py2">
   {% if site.ajaxify_contact_form %}
+    <p>I’m available for small projects. Don’t hesitate to drop me a line.</p>
     <form class="form-stacked">
       <input type="text" name="email" class="field-light" placeholder="{{ site.text.contact.email }}">
       <textarea type="text" name="content" class="field-light" rows="5" placeholder="{{ site.text.contact.content }}"></textarea>
