--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
       </div>
     </div>
     <div class="flex flex-center white p-title">
-        <h2 class="mx-auto">Recent Projects</h2>
+        <h2 class="mx-auto">Selected Work</h2>
     </div>
   </div>
   <div class="flex flex-strech">
