--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ layout: default
 
 <div class="github-projects mt3">
   <h3 class="px4 py2 white"><i class="fa fa-github"></i> Repositories</h3>
-  <div>
+</div>
+<div class="github-projects-list mt3">
   {% for repository in site.github.public_repositories %}
-    <p>{{ repository.full_name }} </p>
+  <p>{{ repository.full_name }} </p>
   {% endfor %}
-  </div>
 </div>
