--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ layout: default
 </div>
 <div class="github-projects-list mt3">
   {% for repository in site.github.public_repositories %}
-  <p><a href="{{ repository.html_url }}">{{ repository.name }}</a> </p>
+  <div id="github-projects-title"><a href="{{ repository.html_url }}">{{ repository.name }}</a> </div>
+  <div id="github-projects-description">{{ repository.language }} </div>
   {% endfor %}
 </div>
