fix class names in css

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ layout: default
 </div>
 <div class="github-projects-list mt3">
   {% for repository in site.github.public_repositories %}
-  <div id="github-projects-element">
-    <div id="github-projects-title"><a href="{{ repository.html_url }}">{{ repository.name }}</a> </div>
-    <div id="github-projects-description">{{ repository.description }} </div>
+  <div class="github-projects-element">
+    <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
+    <div class="github-projects-description">{{ repository.description }} </div>
   </div>
   {% endfor %}
 </div>
