--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@ layout: default
 <div class="github-projects mt3">
   <h3 class="px4 py2 white"><i class="fa fa-github"></i> Repositories</h3>
 </div>
-<div class="github-projects-list mt3">
+<div class="github-projects-list">
   {% for repository in site.github.public_repositories %}
-  <div class="github-projects-element">
-    <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
-    <div class="github-projects-description">{{ repository.description }} </div>
+  <div class="github-projects-element mt1 mb1 flex">
+    <div class="p1 border">
+      <i class="devicon-css3-plain"></i>
+    </div>
+    <div class="p1 border">
+      <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
+      <div class="github-projects-description py1">{{ repository.description }} </div>
+    </div>
   </div>
   {% endfor %}
 </div>
