--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@ layout: default
   {% for repository in site.github.public_repositories %}
   <div class="github-projects-element mt1 mb1 flex">
     <div class="p1 border github-projects-icon">
-      <i class="devicon-css3-plain"></i>
+      {% repository.description[repository.description.length - 5, repository.description.length - 1] %}
+      {% if repository.description[repository.description.length - 5, repository.description.length - 1] == "ruby" %}
+        <i class="devicon-ruby-plain"></i>
+      {% elsif repository.description[repository.description.length - 5, repository.description.length - 1] == "jscr" %}
+        <i class="devicon-javascript-plain"></i>
+      {% elsif repository.description[repository.description.length - 5, repository.description.length - 1] == "java" %}
+        <i class="devicon-java-plain"></i>
+      {% elsif repository.description[repository.description.length - 5, repository.description.length - 1] == "stdc" %}
+        <i class="devicon-c-plain"></i>
+      {% else %}
+        <i class="devicon-github-plain"></i>
+      {% end %}
     </div>
     <div class="p1 border">
       <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
-      <div class="github-projects-description">{{ repository.description }} </div>
+      <div class="github-projects-description mt1">{{ repository.description[0, repository.description.length - 5] }} </div>
     </div>
   </div>
   {% endfor %}
