--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: default
 <div class="projects mt4">
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
-      <div class="browser-mockup mt3">
-        <img src="images/quitocrimemap.jpg" alt="Crime Map" />
+      <div class="mt3">
+        <img src="images/crimen.png" alt="Crime Map" />
       </div>
     </div>
     <div class="flex flex-center white p-title">
@@ -21,8 +21,8 @@ layout: default
   </div>
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-project">
-      <div class="browser-mockup mt3">
-        <img src="images/nocturna.jpg" alt="Nocturna" />
+      <div class="mt3">
+        <img src="images/nocturna.png" alt="Nocturna" />
       </div>
     </div>
   </div>
