--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
       <div class="mt3">
-        <img src="images/crimen.png" alt="Crime Map" />
+        <img src="images/crime.png" alt="Crime Map" />
       </div>
     </div>
     <div class="flex flex-center white p-title">
