--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ layout: default
 <div class="projects mt4">
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
-      <div class="mt3">
-        <img src="images/crime.png" alt="Crime Map" />
+      <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
+        <img class="css-device__image" src="images/quitocrimemap.jpg">
       </div>
     </div>
     <div class="flex flex-center white p-title">
