--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
       <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
-        <img class="css-device__image" src="images/quitocrimemap.jpg">
+        <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
     <div class="flex flex-center white p-title">
@@ -21,8 +21,8 @@ layout: default
   </div>
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-project">
-      <div class="mt3">
-        <img src="images/nocturna.png" alt="Nocturna" />
+      <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
+        <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div>
     </div>
   </div>
