--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -15,12 +15,8 @@ tags: work
     </ul>
   </div>
   <div class="flex px1">
-    <div class="mt1">
-      Nocturna Ediciones is a independent publishing company based in Madrid. They are committed to publishing quality fiction for young readers and adults.
-    </div>
-    <div class="mt2 italic">
-      December, 2014
-    </div>
+    <p class="right-align"> Nocturna Ediciones is a independent publishing company based in Madrid. They are committed to publishing quality fiction for young readers and adults.</p>
+    <p class="left-align italic mt2">Left align</p>
   </div>
 </div>
 
