--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -14,9 +14,9 @@ tags: work
       <li> Front-End Implementation </li>
     </ul>
   </div>
-  <div class="flex px1">
+  <div class="flex">
     <p class="right-align"> Nocturna Ediciones is a independent publishing company based in Madrid. They are committed to publishing quality fiction for young readers and adults.</p>
-    <p class="left-align italic mt2">Left align</p>
+    <p class="left-align italic">December, 2014</p>
   </div>
 </div>
 
