--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -7,14 +7,14 @@ tags: work
 
 <div class="flex flex-strech">
   <div class="flex-auto px1">
-    <h3 class="h3">Provided Services</h3>
-    <ul class="list-reset">
+    <h3 class="h3 services-title"><span>Prov</span>ided Services</h3>
+    <ul class="list-reset services-list">
       <li> Database Normalization </li>
       <li> CMS Development </li>
       <li> Front-End Implementation </li>
     </ul>
   </div>
-  <div class="flex-none col-6 border-box px1">
+  <div class="flex-none col-8 border-box px1">
     <p class="left-align"> Nocturna Ediciones is a independent publishing company based in Madrid. They are committed to publishing quality fiction for young readers and adults.</p>
     <p class="right-align italic">December, 2014</p>
   </div>
