edit list style

--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -7,8 +7,8 @@ tags: work
 
 <div class="flex flex-strech">
   <div class="flex-auto px1">
-    <h3 class="h3 services-title"><span>Prov</span>ided Services</h3>
-    <ul class="list-reset services-list">
+    <h3 class="h3 services-title">Provided <span>Serv</span>ices</h3>
+    <ul class="list-reset services-list mt1">
       <li> Database Normalization </li>
       <li> CMS Development </li>
       <li> Front-End Implementation </li>
