edit css device

--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -8,7 +8,7 @@ tags: work
 <div class="flex flex-strech">
   <div class="flex-auto px1">
     <h3 class="h3 services-title">Provided <span>Serv</span>ices</h3>
-    <ul class="list-reset services-list mt1">
+    <ul class="list-reset services-list mt2">
       <li> Database Normalization </li>
       <li> CMS Development </li>
       <li> Front-End Implementation </li>
@@ -20,11 +20,10 @@ tags: work
   </div>
 </div>
 
-<div class="marvel-device macbook">
-    <div class="top-bar"></div>
-    <div class="camera"></div>
-    <div class="screen">
-        <img src="../images/nocturna.jpg" alt="Nocturna">
+<div class="device-mockup" data-device="macbook" data-orientation="landscape" data-color="white">
+    <div class="device">
+        <div class="screen">
+            <img src="../images/nocturna.jpg" alt="Nocturna">
+        </div>
     </div>
-    <div class="bottom-bar"></div>
 </div>
