--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -20,10 +20,25 @@ tags: work
   </div>
 </div>
 
-<div class="device-mockup" data-device="macbook" data-orientation="landscape" data-color="white">
+<div class="device-mockup m3" data-device="macbook" data-orientation="landscape" data-color="white">
     <div class="device">
         <div class="screen">
             <img src="../images/nocturna.jpg" alt="Nocturna">
         </div>
     </div>
 </div>
+
+<h3>The Challange</h3>
+<p class="left-align">
+  Although Nocturna already had a website, they weren’t satisfied with their own CMS. It was not filling their needs, and it also had usability and look-and feel issues. As a result, publishing workflow was unorganized and often chaotic. Furthermore, their CMS used deprecated PHP code and an unormalized MySQL database.
+</p>
+
+<h3>Normalising Database and Code</h3>
+<p class="left-align">
+  Deprecated PHP code was removed or updated to 5.5 version. Some functions were overwritten in order to improve the data management workflow. Furthermore, the database was normalised to avoid any data inconsistencies and provide faster data access. For instance, the database did’t have any junction tables at all, so tables were not properly related.
+</p>
+
+<h3>Restructuring Workflow Process to Improve Publishing Efficiency</h3>
+<p class="left-align">
+  A new responsive template was implemented and customized to meet Nocturna’s needs. Moreover, workflow was restructured in order to improve usability, while increasing the effectiveness and efficiency of publishing process.
+</p>
