--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -6,7 +6,7 @@ tags: work
 ---
 
 <div class="flex flex-strech">
-  <div class="flex-auto px1">
+  <div class="flex-auto">
     <h3 class="h3 services-title">Provided <span>Serv</span>ices</h3>
     <ul class="list-reset services-list mt2">
       <li> Database Normalization </li>
@@ -14,7 +14,7 @@ tags: work
       <li> Front-End Implementation </li>
     </ul>
   </div>
-  <div class="flex-none col-8 border-box px1">
+  <div class="flex-none col-8 border-box">
     <p class="left-align"> Nocturna Ediciones is a independent publishing company based in Madrid. They are committed to publishing quality fiction for young readers and adults.</p>
     <p class="right-align italic">December, 2014</p>
   </div>
@@ -28,7 +28,7 @@ tags: work
     </div>
 </div>
 
-<h3>The Challange</h3>
+<h3>The Challenge</h3>
 <p class="left-align">
   Although Nocturna already had a website, they weren’t satisfied with their own CMS. It was not filling their needs, and it also had usability and look-and feel issues. As a result, publishing workflow was unorganized and often chaotic. Furthermore, their CMS used deprecated PHP code and an unormalized MySQL database.
 </p>
