--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -21,11 +21,26 @@ tags: work
 </div>
 
 <div class="device-mockup m3" data-device="macbook" data-orientation="landscape" data-color="white">
-    <div class="device">
-        <div class="screen">
-            <img src="../images/nocturna.jpg" alt="Nocturna">
-        </div>
+  <div class="device">
+    <div class="screen">
+      <img src="../images/nocturna.jpg" alt="Nocturna">
     </div>
+  </div>
+</div>
+
+
+<div class="css-mb with-glare">
+  <div class="mb-display-position">
+    <div class="mb-display">
+      <div class="mb-screen-position">
+        <div class="mb-screen">
+          <img src="../images/nocturna.jpg" alt="Nocturna">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mb-body"></div>
+  <div class="mb-bottom-cover"></div>
 </div>
 
 <h3>The Challenge</h3>
