--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -5,7 +5,7 @@ permalink: /works/nocturna.html
 tags: work
 ---
 
-<div class="flex flex-strech">
+<div class="flex flex-strech mb3">
   <div class="flex-auto">
     <h3 class="h3 services-title">Provided <span>Serv</span>ices</h3>
     <ul class="list-reset services-list mt2">
@@ -34,7 +34,7 @@ tags: work
   <div class="mb-bottom-cover"></div>
 </div>
 
-<h3>The Challenge</h3>
+<h3 class="mt3">The Challenge</h3>
 <p class="left-align">
   Although Nocturna already had a website, they weren’t satisfied with their own CMS. It was not filling their needs, and it also had usability and look-and feel issues. As a result, publishing workflow was unorganized and often chaotic. Furthermore, their CMS used deprecated PHP code and an unormalized MySQL database.
 </p>
