add redesign images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-project">
       <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
-        <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
+        <a href="works/nocturna.html"><img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna"></a>
       </div>
     </div>
   </div>
