--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -5,7 +5,7 @@ permalink: /works/nocturna.html
 tags: work
 ---
 
-<div class="flex flex-strech mb2">
+<div class="flex flex-strech mb1">
   <div class="flex-auto">
     <h3 class="h3 services-title">Provided <span>Serv</span>ices</h3>
     <ul class="list-reset services-list mt2">
@@ -43,6 +43,8 @@ tags: work
 <p class="left-align">
   Deprecated PHP code was removed or updated to 5.5 version. Some functions were overwritten in order to improve the data management workflow. Furthermore, the database was normalised to avoid any data inconsistencies and provide faster data access. For instance, the database did’t have any junction tables at all, so tables were not properly related.
 </p>
+
+<img src="../images/relations.jpg" alt="Redesign" class="mt1 mb1">
 
 <h3>Restructuring Workflow Process to Improve Publishing Efficiency</h3>
 <p class="left-align">
