--- a/works/nocturna.html
+++ b/works/nocturna.html
@@ -44,7 +44,7 @@ tags: work
   Deprecated PHP code was removed or updated to 5.5 version. Some functions were overwritten in order to improve the data management workflow. Furthermore, the database was normalised to avoid any data inconsistencies and provide faster data access. For instance, the database did’t have any junction tables at all, so tables were not properly related.
 </p>
 
-<div class="case-image center p1">
+<div class="case-image center mb1 mt2">
   <img src="../images/relations.jpg" alt="Redesign" >
 </div>
 
