--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ layout: default
   </div>
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-project">
-      <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
-        <a href="works/nocturna.html"><img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna"></a>
-      </div>
+      <a href="works/nocturna.html"><div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
+        <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
+      </div></a>
     </div>
   </div>
 </div>
