edit media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
 </div>
 
 <div class="projects mt4">
+  <h2 class="mx-auto work-title-small">Selected Work</h2>
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
       <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
@@ -16,7 +17,7 @@ layout: default
       </div>
     </div>
     <div class="flex flex-center white p-title">
-        <h2 class="mx-auto">Selected Work</h2>
+        <h2 class="mx-auto work-title">Selected Work</h2>
     </div>
   </div>
   <div class="flex flex-strech">
