--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="flex flex-center white p-title">
-        <h2 class="mx-auto work-title">Selected Work</h2>
+    <div class="flex flex-center white p-title work-title">
+        <h2 class="mx-auto">Selected Work</h2>
     </div>
   </div>
   <div class="flex flex-strech">
