--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ layout: default
 </div>
 
 <div class="projects mt4">
-  <h2 class="mx-auto work-title-small">Selected Work</h2>
+  <h2 class="my-2 mx-auto white work-title-small">Selected Work</h2>
   <div class="flex flex-strech">
     <div class="flex-auto px4 p-main">
       <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="flex flex-center white p-title work-title">
-        <h2 class="mx-auto">Selected Work</h2>
+    <div class="flex flex-center p-title work-title">
+        <h2 class="mx-auto white">Selected Work</h2>
     </div>
   </div>
   <div class="flex flex-strech">
