--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@ layout: default
 </div>
 
 <div class="projects mt4">
-  <div class="flex flex-strech">
-    <div class="flex-auto sm-col sm-col-8">
-      <div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
+
+  <div class="clearfix border">
+    <div class="sm-col sm-col-9">
+      <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="flex sm-col sm-col-4 sm-show">
-        <h2 class="mx-auto white">Selected Work</h2>
+    <div class="sm-col sm-col3">
+      <h2 class="white">Selected Work</h2>
     </div>
   </div>
-  <div class="flex flex-strech">
-    <div class="flex-auto px4 p-project">
-      <a href="works/nocturna.html"><div class="css-device css-device--browser mt3" data-url="http://ferandrade.com/quito-crime-map/">
+
+  <div class="clearfix border">
+    <div class="sm-col sm-col12">
+      <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div></a>
     </div>
