--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@ layout: default
 
 <div class="projects mt4">
 
-  <div class="clearfix border">
-    <div class="sm-col sm-col-9">
+  <div class="clearfix">
+    <div class="sm-col sm-col-7 md-col-9 p2">
       <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="sm-col sm-col3">
+    <div class="sm-col sm-col5 md-col-3 p2">
       <h2 class="white">Selected Work</h2>
     </div>
-  </div>
-
-  <div class="clearfix border">
-    <div class="sm-col sm-col12">
+    <div class="col col-12 p2">
       <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div></a>
