--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ layout: default
 <div class="projects mt4">
 
   <div class="clearfix">
-    <div class="sm-col sm-col-7 md-col-9 p4">
+    <div class="sm-col sm-col-7 md-col-9 lg-col-9 p3">
       <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="sm-col sm-col-5 md-col-3 p2">
+    <div class="sm-col sm-col-5 md-col-3 lg-col-3 p2">
       <h2 class="white">Selected Work</h2>
     </div>
-    <div class="col col-12 p2">
+    <div class="col col-12 p3">
       <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div></a>
