--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: default
 <div class="projects mt4">
 
   <div class="clearfix">
-    <div class="sm-col sm-col-7 md-col-9 p3">
+    <div class="col sm-col-7 md-col-8 p3">
       <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="sm-col sm-col-5 md-col-3 p2">
+    <div class="col sm-col-5 md-col-4 p2 flex-center">
       <h2 class="white">Selected Work</h2>
     </div>
     <div class="col col-12 p3">
