--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: default
         <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
       </div>
     </div>
-    <div class="col sm-col-5 md-col-4 p2 flex-center">
-      <h2 class="white mt4">Selected Work</h2>
+    <div class="col sm-col-5 md-col-4 p3">
+      <h2 class="white">Selected Work</h2>
     </div>
     <div class="col col-12 p3">
       <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
