--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@ layout: default
       <h2 class="white">Selected Work</h2>
     </div>
     <div class="col col-12 p3">
-      <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
-        <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
-      </div></a>
+      <div class="css-device css-device--browser cs-style-4" data-url="http://ferandrade.com/quito-crime-map/">
+        <figure>
+						<div><img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna"></div>
+						<figcaption>
+							<h3>Nocturna Ediciones</h3>
+							<span>Database Normalization, CMS Development and Front-End Implementation</span>
+							<a href="http://ferandrade.com/works/nocturna.html">Take a look</a>
+						</figcaption>
+					</figure>
+      </div>
     </div>
   </div>
 </div>
