--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
       <h2 class="white">Selected Work</h2>
     </div>
     <div class="col col-12 p3">
-      <div class="css-device css-device--browser cs-style-4" data-url="http://ferandrade.com/quito-crime-map/">
+      <div class="css-device css-device--browser more-details" data-url="http://ferandrade.com/quito-crime-map/">
         <figure>
 						<div><img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna"></div>
 						<figcaption>
