--- a/portfolio.html
+++ b/portfolio.html
@@ -6,18 +6,19 @@ tags: portfolio
 ---
 
 <h1 class="h2 center"><span class="social-title">Github Repositories</span></h1>
-<div class="github-projects-list">
+<div class="github-projects-list clearfix">
   {% for repository in site.github.public_repositories %}
-  <div class="github-projects-element mt1 mb1 flex">
-    <div class="p1 border github-projects-icon">
-      {% assign summary = repository.description | split: '#' %}
-      {% assign description = summary[0] %}
-      {% assign icono = summary[1] %}
-      <i class="devicon-{{ icono }}-plain"></i>
-    </div>
-    <div class="p1 border">
-      <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
-      <div class="github-projects-description mt1">{{ description }}</div>
+  <div class="sm-col sm-col-6 github-projects-element">
+    <div class="clearfix">
+      <div class="sm-col sm-col-4 p1">
+        {% assign summary = repository.description | split: '#' %}
+        {% assign description = summary[0] %}
+        {% assign icono = summary[1] %}
+        <i class="devicon-{{ icono }}-plain"></i>
+      <div class="sm-col sm-col-8 p1">
+        <h4><a href="{{ repository.html_url }}">{{ repository.name }}</a> </h4>
+        <div class="github-projects-description mt1">{{ description }}</div>
+      </div>
     </div>
   </div>
   {% endfor %}
