--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@ tags: portfolio
 ---
 
 <h1 class="h2 center"><span class="social-title">Github Repositories</span></h1>
-<div class="github-projects-list clearfix">
+<div class="github-projects-list clearfix mt3">
   {% for repository in site.github.public_repositories %}
   <div class="col sm-col-6 github-projects-element">
     <div class="clearfix">
-      <div class="col sm-col-3 github-projects-icon p1">
+      <div class="col sm-col-3 github-projects-icon p2">
         {% assign summary = repository.description | split: '#' %}
         {% assign description = summary[0] %}
         {% assign icono = summary[1] %}
