--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <h3>Developer</h3>
 </div>
 
-<div class="projects mt4">
+<div class="projects mt4 mb2">
   <div class="clearfix">
     <div class="col sm-col-5 md-col-4 p3 mt3">
       <h2 class="white">Selected Work</h2>
