change button style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: index
   <div class="clearfix">
     <div class="col sm-col-5 md-col-4 p3 mt3">
       <h2 class="white">Selected Work</h2>
-      <button class="button button--ujarak caps">Portfolio</button>
+      <button class="button button-portfolio caps">Portfolio</button>
     </div>
     <div class="col sm-col-7 md-col-8 p3">
       <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
