--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: index
   <div class="clearfix">
     <div class="col sm-col-5 md-col-4 p3 mt3">
       <h2 class="white">Selected Work</h2>
-      <button class="button button-portfolio caps mt1">Portfolio</button>
+      <a href="portfolio" class="button button-portfolio caps mt1">Portfolio</a>
     </div>
     <div class="col sm-col-7 md-col-8 p3">
       <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
@@ -21,7 +21,7 @@ tags: index
       </div>
     </div>
     <div class="col col-12 p3">
-      <a href="works/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
+      <a href="portfolio/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div></a>
     </div>
